[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["William Kraus <88288206+KrLiam@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
cachetools = "^5.2.0"
numpy = "^1.23.5"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
"solve" = "advent_of_code.scripts:solve"
"create" = "advent_of_code.scripts:create"

[tool.black]
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
